# dr-socket

./: .gitignore  404.html  CMakeLists.txt  README.md  build-android-debug.bat  build-android-debug.sh  build-android-release.bat  build-android-release.sh  build-android.bat  build-android.sh  build-ios-debug.sh  build-ios.sh  build-raspberrypi-debug.sh  build-raspberrypi.sh  build-universal-zig.sh  build-unix-debug.sh  build-unix-release.sh  build-unix.sh  build-windows-debug.bat  build-windows-release.bat  build-windows.bat  index.html  protocol.md  requirements.txt  run.bat  search.html
.github/actions/compile-and-test/: action.yml
.github/workflows/: build-and-test.yml
api/raw/: index.html
api/raw/client/: index.html
api/raw/server/: index.html
app/: build_ios.rb  main.rb
app/tests/: serialize.rb  test.rb
docs/: mkdocs.yml
docs/docs/: index.md
docs/docs/api/: raw.md
docs/docs/api/raw/: client.md  server.md
docs/docs/overview/: docs.md  get-started.md  platforms.md
metadata/: game_metadata.txt
native-app/: api.cpp  api.h  buffer.cpp  buffer.h  enet.cpp  enet.cpp.todo  enet.h  ext.cpp  ext.h  file.cpp  file.h  help.cpp  help.h  ios.h  lua.cpp  lua.h  print.cpp  print.h  ruby.h  serialize.cpp  serialize.h  socket.cpp  socket.h  socket.rb.h  test.cpp  test.h  zpl_enet.h
overview/docs/: index.html
overview/get-started/: index.html
readme/: msys2.md
search/: search_index.json
tools/: .gitignore  Info.plist  find-dr.bat  find-dr.sh  get-ios-info.sh  raspberrypi.toolchain.cmake
tools/cmake/: meta.cmake  platform.cmake
tools/res/enet/: install.yaml
tools/scripts/: build.py  ensure.py  find-dr.py  install.py
